[gd_scene load_steps=10 format=3 uid="uid://db50wvqb2n0b8"]

[ext_resource type="Script" uid="uid://bc81go2wkc13b" path="res://scripts/piece.gd" id="1_p0th5"]
[ext_resource type="Shader" uid="uid://be4i7pptm81nu" path="res://shaders/psx_lit_sprite.gdshader" id="2_vvfn8"]
[ext_resource type="Texture2D" uid="uid://8gu0ed7c55y6" path="res://asset/2d/sprite/object/pieces.png" id="3_cvlhu"]
[ext_resource type="AudioStream" uid="uid://b4xgma56tgtv2" path="res://sfx/object/piece1.wav" id="4_ee2f7"]
[ext_resource type="AudioStream" uid="uid://cgrc8c0y4e6i" path="res://sfx/object/piece2.wav" id="5_cjpwo"]
[ext_resource type="AudioStream" uid="uid://bdptgpirfpj1k" path="res://sfx/object/piece3.wav" id="6_08kcw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y200a"]
render_priority = 0
shader = ExtResource("2_vvfn8")

[sub_resource type="BoxShape3D" id="BoxShape3D_cewfo"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_m6ecn"]
playback_mode = 1
streams_count = 3
stream_0/stream = ExtResource("4_ee2f7")
stream_1/stream = ExtResource("5_cjpwo")
stream_2/stream = ExtResource("6_08kcw")

[node name="PieceArea" type="Area3D" groups=["piece"]]
process_mode = 1
script = ExtResource("1_p0th5")

[node name="PieceSprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
material_override = SubResource("ShaderMaterial_y200a")
pixel_size = 0.03
texture = ExtResource("3_cvlhu")
hframes = 20
vframes = 5

[node name="PieceCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_cewfo")

[node name="PieceSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
stream = SubResource("AudioStreamRandomizer_m6ecn")
panning_strength = 2.0
attenuation_filter_cutoff_hz = 20500.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
